# web_server

./: CMakeLists.txt  README.md  server
include/: epoll_server.h  func.h  httpresponse.h  log.h  server.h  thread_pool.hpp
res/: 404.html
src/: epoll_server.cpp  func.cpp  httpresponse.cpp  log.cpp  main.cpp  server.cpp
